@@ -1,3 +1,5 @@
+- Fix avoid proxying immutable classes
+
 = 0.1.3
 - Fix for returning immutable class from CowProxy
 - Added Fixnum and Bignum to non-proxied classes for ruby < 2.4
